resolves issue 25 sponsors heading too close

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -10,3 +10,9 @@
 .address {
   padding: 10px 0;
 }
+
+.sponsors__heading{
+  @media screen and (max-width: 767px){
+    padding-top: 435px;
+  }
+}
